--- a/website as/style.css
+++ b/website as/style.css
@@ -1,7 +1,10 @@
 .box {
   text-align: left;
   display:flex;
-  justify-content: center;
-  width: 500px;
+  width: 400px;
   height: 800px;
+  margin: 0 auto
+  
 }
+
+.header { text-align: center }
