--- a/tour/style.css
+++ b/tour/style.css
@@ -7,9 +7,15 @@
 
 }
 
+.container {
+display: flex;
+flex-wrap: wrap;
+
+}
+
+
 h1 {
 font-family: 'septimaregular',serif; font-style: normal; font-variant: normal;
-
 font-size: 40px;
 margin: auto;
 width: 97%;
@@ -20,17 +26,33 @@ padding: 10px;
 h2 {
 font-family: 'septimaregular',serif; font-style: normal; font-variant: normal;
 font-size: 40px;
-position: absolute;
+position: relative;
 top: -10px;
 right: 28px;
 }
+
+.buttoncontainer {
+
+}
+
 
 .cta { 
 font-family: 'septimaregular',serif; font-style: normal; font-variant: normal;
 font-size: 30px;
 position: absolute;
-bottom: -10px;
-right: 28px;
+    bottom: -10px;
+    right: 28px;
+}
+
+@media screen and (min-width: 500px) {
+
+  .cta { 
+    font-family: 'septimaregular',serif; font-style: normal; font-variant: normal;
+font-size: 30px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+    }
 }
 
 /* mouse over link */
