--- a/tour/style.css
+++ b/tour/style.css
@@ -32,7 +32,8 @@ right: 28px;
 }
 
 .buttoncontainer {
-
+  display: flex;
+  flex-wrap: wrap;
 }
 
 
@@ -44,14 +45,23 @@ position: absolute;
     right: 28px;
 }
 
-@media screen and (min-width: 500px) {
+@media screen and (max-width: 489px) {
+.container {
+display: flex;
+flex-wrap: wrap;
 
+}
+
+.buttoncontainer {
+  display: flex;
+  flex-wrap: wrap;
+}
   .cta { 
     font-family: 'septimaregular',serif; font-style: normal; font-variant: normal;
 font-size: 30px;
-  display: flex;
-  flex-wrap: wrap;
+
   justify-content: flex-end;
+  align-items: flex-end;
     }
 }
 
