--- a/tour/style.css
+++ b/tour/style.css
@@ -26,7 +26,7 @@ padding: 10px;
 h2 {
 font-family: 'septimaregular',serif; font-style: normal; font-variant: normal;
 font-size: 40px;
-position: relative;
+position: absolute;
 top: -10px;
 right: 28px;
 }
